--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GGJ2021Build.loader.js";
+      var loaderUrl = buildUrl + "/40378010e70db83297107fd5e9ba8fbf.js";
       var config = {
-        dataUrl: buildUrl + "/GGJ2021Build.data",
-        frameworkUrl: buildUrl + "/GGJ2021Build.framework.js",
-        codeUrl: buildUrl + "/GGJ2021Build.wasm",
+        dataUrl: buildUrl + "/01ea06f042437bbd24eea406999f8c73.unityweb",
+        frameworkUrl: buildUrl + "/7b8e35cc2d11e3f571335c3d8fa44f31.unityweb",
+        codeUrl: buildUrl + "/cebe71a1d5e12862c2f7a78882774b1d.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GGJ2021",
