Creates a new build with music

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | GGJ2021</title>
+    <title>Unity WebGL Player | Lost Memories</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -19,19 +19,19 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">GGJ2021</div>
+        <div id="unity-build-title">Lost Memories</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/40378010e70db83297107fd5e9ba8fbf.js";
       var config = {
-        dataUrl: buildUrl + "/8c5745c05f323dd09a5b64d10a9b21e9.unityweb",
-        frameworkUrl: buildUrl + "/12eb660c08288df25a24f4a75226a090.unityweb",
-        codeUrl: buildUrl + "/656ffcb5015bc62b4501a178a96b593d.unityweb",
+        dataUrl: buildUrl + "/b8ae5d2195c6b650655c185468fbfc78.unityweb",
+        frameworkUrl: buildUrl + "/ae4db32ec3835c6d7f59b564e099de71.unityweb",
+        codeUrl: buildUrl + "/62f01655beaea2378f7dc89535b08359.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "GGJ2021",
+        companyName: "RoyalSlackers",
+        productName: "Lost Memories",
         productVersion: "0.1",
       };
 
